# watcher-cog

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CONFIGURATION.md  PIPELINE.md
src/watcher_cog/: __init__.py  config.py  drive_client.py  heartbeat.py  logger.py  main.py  prefect_trigger.py  watcher.py
tests/: conftest.py  test_drive_client.py  test_heartbeat.py  test_prefect_trigger.py  test_watcher.py
