[project]
name = "watcher-cog"
version = "0.1.0"
description = "Google Drive watcher worker that triggers Prefect deployments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "kaiano",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.uv.sources]
kaiano = { git = "https://github.com/kaianolevine/kaiano-common-utils.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "ANN"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/watcher_cog"]